WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
275182
In in-window mode, missing PIP when minimizing safari
https://bugs.webkit.org/show_bug.cgi?id=275182
Summary
In in-window mode, missing PIP when minimizing safari
Dana Estra
Reported
2024-06-05 14:57:37 PDT
In in-window mode, missing PIP when minimizing safari
Attachments
Add attachment
proposed patch, testcase, etc.
Dana Estra
Comment 1
2024-06-05 14:57:56 PDT
<
rdar://problem/124376686
>
Dana Estra
Comment 2
2024-06-05 15:18:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29560
EWS
Comment 3
2024-06-10 09:20:31 PDT
Committed
279877@main
(2cc2b7b1a748): <
https://commits.webkit.org/279877@main
> Reviewed commits have been landed. Closing PR #29560 and removing active labels.
WebKit Commit Bot
Comment 4
2024-06-20 09:19:48 PDT
Re-opened since this is blocked by
bug 275692
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug