Source/WebCore/platform/mac/VideoPresentationInterfaceMac.mm
@@ -556,8 +556,28 @@ void VideoPresentationInterfaceMac::requestHideAndExitPiP()
     if (!model)
         return;
 
-    model->requestFullscreenMode(HTMLMediaElementEnums::VideoFullscreenModeNone);
-    model->willExitPictureInPicture();
+    if (m_documentIsVisible) {
+        model->requestFullscreenMode(m_mode & ~HTMLMediaElementEnums::VideoFullscreenModePictureInPicture);
+        model->willExitPictureInPicture();
+    } else {
+        auto callback = [this, model] () {
+            model->requestFullscreenMode(m_mode & ~HTMLMediaElementEnums::VideoFullscreenModePictureInPicture);
+            model->willExitPictureInPicture();
+        };
+        setDocumentBecameVisibleCallback(WTFMove(callback));
+    }
+
+}
+
+void VideoPresentationInterfaceMac::documentVisibilityChanged(bool isDocumentVisible)
+{
+    bool documentWasVisible = m_documentIsVisible;
+    m_documentIsVisible = isDocumentVisible;
+
+    if (!documentWasVisible && m_documentIsVisible && m_documentBecameVisibleCallback) {
+        m_documentBecameVisibleCallback();
+        m_documentBecameVisibleCallback = nullptr;
+    }
 }
 
 #if !LOG_DISABLED
